Serve SPA at / and mount static assets.

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -9,7 +9,7 @@
     <style>
       @font-face {
         font-family: "MightySouly";
-        src: url("./fonts/MightySouly-lxggD.ttf") format("truetype");
+        src: url("/static/fonts/MightySouly-lxggD.ttf") format("truetype");
         font-weight: 400;
         font-style: normal;
         font-display: swap;
@@ -534,6 +534,6 @@
     </script>
 
     <!-- API logic -->
-    <script src="./app.js"></script>
+    <script src="/static/app.js"></script>
   </body>
 </html>
