Edited UI - moved win/lose message

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -580,6 +580,10 @@
               ></div>
             </div>
 
+            <!-- WIN/LOSE message + secret code -->
+            <div id="final-note" class="note"></div>
+            <div id="secret-box" class="note"></div>
+
             <div class="help" id="hint-result"></div>
             <div id="last-feedback" class="help"></div>
           </div>
@@ -606,10 +610,6 @@
               <tbody id="history-body"></tbody>
             </table>
           </div>
-
-          <div class="spacer"></div>
-          <div id="final-note" class="note"></div>
-          <div id="secret-box" class="note"></div>
         </div>
 
         <!-- RIGHT: Scoreboard -->
